# Dadd-E

./: .gitignore  CONNECT_DEVICE.sh  QUICKSTART.md  README.md  START_HERE.md  database_schema.sql  find_characteristics.py  main.py  pyproject.toml  scan_all_characteristics.py  start_backend.sh  start_device.sh  test_setup.py  test_tts.py
app/: __init__.py  main.py
app/core/: config.py
app/models/: schemas.py
app/routers/: actions.py  tts.py  vision.py  voice.py
app/services/: database.py  integrations.py  tts.py  vision.py  voice.py
device/: __init__.py  find_audio_char.py  omi_service.py  quiet_decoder.py  runtime.py  scan_devices.py
docs/: DEEPGRAM_SETUP.md  KNOWN_ISSUES.md  RAILWAY_DEPLOYMENT.md
